--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, CoolWeatherActivity!</string>
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">酷欧天气</string>
 
 </resources>
